# blog-backend-rust

./: Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20250123_150453_create_user_table.rs  m20250123_151445_create_user_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  user_routes.rs
src/routes/handler/: auth_handler.rs  home_handler.rs  mod.rs  user_handler.rs
src/routes/middleware/: auth_middleware.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs  mod.rs
