[package]
name = "blog_rust"
version = "0.1.0"
edition = "2021"

[workspaces]
members = [ ".", "migration", "entity" ]

[dependencies]
actix-web = "4"
serde = "1.0.217"
serde_json = "1.0.137"
env_logger = "0.11.6"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }